Add DAG Generation methods, move into headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 find_package(SimGrid 3.20 REQUIRED) # This template requires SimGrid v3.20
 
+include_directories(.)
 include_directories(${SimGrid_INCLUDE_DIR})
 
 add_executable(ping-pong ping-pong.cpp)
@@ -14,4 +15,3 @@ target_link_libraries(ping-pong ${SimGrid_LIBRARY})
 
 add_executable(master-workers master-workers.cpp)
 target_link_libraries(master-workers ${SimGrid_LIBRARY})
-
